# lamberthub

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CNAME  LICENSE  README.md  index.html  pyproject.toml  setup.cfg  test.py  tox.ini  versions.json
.github/: dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  new_feature.md  new_solver.md
.github/workflows/: ci_actions.yml  ci_cd.yml  ci_cd_pr.yml  docs.yml
doc/: .vale.ini  Makefile
doc/source/: conf.py  index.md  index.rst
doc/source/_autoapi_templates/: index.rst
doc/source/_static/: custom.css  highlight.css
doc/source/explanations/: index.md  performance_comparison.md  the_lamberts_problem.md  the_lamberts_problem.rst
doc/source/getting-started/: about.rst  how-to-install.rst  how_to_install.md  index.rst
doc/source/how_to/: how_to_contribute.rst  how_to_install.rst  how_to_use.mystnb  how_to_use.rst  index.rst
doc/source/how_to_guides/: how_to_contribute.md  how_to_install.md  how_to_use.md
doc/source/references/: about.md  about.rst  index.rst  references.md  references.rst
doc/source/tutorials/: gauss1809_solver.mystnb  index.md
doc/source/user-guide/: index.rst  overview.rst
doc/styles/Vocab/LAMBERTHUB/: accept.txt
doc/styles/config/vocabularies/LAMBERTHUB/: accept.txt
docs/: Makefile
docs/source/: conf.py  index.md
docs/source/explanations/: performance_comparison.md
docs/source/how_to_guides/: how_to_use.md
docs/source/references/: about.md
docs/source/tutorials/: gallery.md  gauss_solver.mystnb
requirements/: requirements_build.txt  requirements_doc.txt  requirements_tests.txt
scripts/: generate_benchmark_report.py
src/lamberthub/: __init__.py  linalg.py
src/lamberthub/a_solvers/: __init__.py  jiang.py  utils.py
src/lamberthub/ecc_solvers/: __init__.py  avanzini.py  utils.py
src/lamberthub/p_solvers/: __init__.py  battin.py  gauss.py  jiang.py  pan.py
src/lamberthub/plotting/: __init__.py  _base.py  colormaps.py  iterations.py  time.py  utils.py
src/lamberthub/regularization/: __init__.py  delatorre.py
src/lamberthub/series_solvers/: __init__.py  thorne.py
src/lamberthub/universal_solvers/: __init__.py  arora.py  der.py  gooding.py  izzo.py  mcelreath.py  negrete.py  vallado.py
src/lamberthub/utils/: __init__.py  angles.py  assertions.py  elements.py  kepler.py  misc.py  stumpff.py
tests/: conftest.py  test_all_solvers.py  test_benchmarks.py  test_metadata.py  test_multirev_solvers.py  test_robust_solvers.py
tests/tests_ecc_solvers/: test_avanzini.py
tests/tests_p_solvers/: test_battin.py  test_gauss.py  test_jiang.py  test_pan.py
tests/tests_plotting/: test_base.py  test_iterations_plotter.py  test_time_plotter.py
tests/tests_universal_solvers/: test_arora.py  test_der.py  test_gooding.py  test_izzo.py  test_vallado.py
tests/tests_utils/: test_angles.py  test_assertions.py  test_elements.py  test_kepler.py
version/dev/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/dev/_sources/autoapi/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/ecc_solvers/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/ecc_solvers/avanzini/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/ecc_solvers/utils/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/p_solvers/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/p_solvers/battin/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/p_solvers/gauss/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/universal_solvers/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/universal_solvers/arora/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/universal_solvers/gooding/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/universal_solvers/izzo/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/universal_solvers/vallado/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/utils/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/utils/angles/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/utils/assertions/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/utils/elements/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/utils/kepler/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/utils/misc/: index.rst.txt
version/dev/_sources/autoapi/lamberthub/utils/stumpff/: index.rst.txt
version/dev/_sources/explanations/: the_lamberts_problem.md.txt
version/dev/_static/: custom.css  documentation_options.js
version/dev/autoapi/: index.html
version/dev/autoapi/lamberthub/: index.html
version/dev/autoapi/lamberthub/ecc_solvers/: index.html
version/dev/autoapi/lamberthub/ecc_solvers/avanzini/: index.html
version/dev/autoapi/lamberthub/ecc_solvers/utils/: index.html
version/dev/autoapi/lamberthub/p_solvers/: index.html
version/dev/autoapi/lamberthub/p_solvers/battin/: index.html
version/dev/autoapi/lamberthub/p_solvers/gauss/: index.html
version/dev/autoapi/lamberthub/universal_solvers/: index.html
version/dev/autoapi/lamberthub/universal_solvers/arora/: index.html
version/dev/autoapi/lamberthub/universal_solvers/gooding/: index.html
version/dev/autoapi/lamberthub/universal_solvers/izzo/: index.html
version/dev/autoapi/lamberthub/universal_solvers/vallado/: index.html
version/dev/autoapi/lamberthub/utils/: index.html
version/dev/autoapi/lamberthub/utils/angles/: index.html
version/dev/autoapi/lamberthub/utils/assertions/: index.html
version/dev/autoapi/lamberthub/utils/elements/: index.html
version/dev/autoapi/lamberthub/utils/kepler/: index.html
version/dev/autoapi/lamberthub/utils/misc/: index.html
version/dev/autoapi/lamberthub/utils/stumpff/: index.html
version/dev/explanations/: the_lamberts_problem.html
version/dev/how_to_guides/: how_to_contribute.html  how_to_install.html  how_to_use.html
version/dev/references/: about.html  references.html
