[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lamberthub"
readme = "README.md"
license = {file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    {name = "Jorge Martínez Garrido", email = "contact@jorgemartinez.space" }
]
maintainers = [
    {name = "Jorge Martínez Garrido", email = "contact@jorgemartinez.space" }
]
keywords = [
    "aerospace",
    "astrodynamics",
    "orbital-mechanics",
    "kepler",
    "lambert",
    "orbit-determination",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = ["numpy", "scipy"]
dynamic = ["version", "description"]

[project.optional-dependencies]
tests = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
]

[project.urls]
Source = "https://github.com/lamberthub/lamberthub"
Tracker = "https://github.com/lamberthub/lamberthub/issues"

[tool.flit.sdist]
exclude = [
    "doc/",
    "tests",
    "art/",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 79
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["lamberthub"]

[tool.coverage.report]
show_missing = true
