[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lamberthub"
readme = "README.md"
license = {file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    {name = "Jorge Martínez Garrido", email = "contact@jorgemartinez.space" }
]
maintainers = [
    {name = "Jorge Martínez Garrido", email = "contact@jorgemartinez.space" }
]
keywords = [
    "aerospace",
    "astrodynamics",
    "orbital-mechanics",
    "kepler",
    "lambert",
    "orbit-determination",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = ["numpy", "scipy"]
dynamic = ["version", "description"]

[project.optional-dependencies]
tests = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
]

[project.urls]
Source = "https://github.com/jorgepiloto/lamberthub"
Issues = "https://github.com/jorgepiloto/lamberthub/issues"
Documentation = "https://github.com/jorgepiloto/lamberthub/blob/main/README.md"
Releases = "https://github.com/jorgepiloto/lamberthub/releases"

[tool.flit.sdist]
exclude = [
    "doc/",
    "tests",
    "art/",
]

[tool.coverage.run]
source = ["lamberthub"]

[tool.coverage.report]
show_missing = true
