[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lamberthub"
readme = "README.md"
license = {file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    {name = "Jorge Martínez Garrido", email = "contact@jorgemartinez.space" }
]
maintainers = [
    {name = "Jorge Martínez Garrido", email = "contact@jorgemartinez.space" }
]
keywords = [
    "aerospace",
    "astrodynamics",
    "orbital-mechanics",
    "kepler",
    "lambert",
    "orbit-determination",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = ["numba", "numpy", "scipy"]
dynamic = ["version", "description"]

[project.optional-dependencies]
tests = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
]

[project.urls]
Homepage = "https://github.com/jorgepiloto/lamberthub"
Source = "https://github.com/jorgepiloto/lamberthub"
Issues = "https://github.com/jorgepiloto/lamberthub/issues"
Documentation = "https://github.com/jorgepiloto/lamberthub/blob/main/README.md"
Releases = "https://github.com/jorgepiloto/lamberthub/releases"

[tool.flit.sdist]
exclude = [
    "doc/",
    "tests",
    "art/",
]

[tool.coverage.run]
source = ["lamberthub"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle, see https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
#    "D",    # pydocstyle, see https://beta.ruff.rs/docs/rules/#pydocstyle-d
    "F",    # pyflakes, see https://beta.ruff.rs/docs/rules/#pyflakes-f
    "I",    # isort, see https://beta.ruff.rs/docs/rules/#isort-i
#    "N",    # pep8-naming, see https://beta.ruff.rs/docs/rules/#pep8-naming-n
    "PTH",  # flake9-use-pathlib, https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
    "TD",   # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
ignore = [
    # pycodestyle
    "E501",  # Line too long. Ignoring this so "ruff.formatter" manages line length.
    # flake8-todos
    "TD002", # Missing author in TODOs comment
]

[tool.ruff.lint.per-file-ignores]
# Ignore `D` rules everywhere except for the `src/` directory.
"!src/**.py" = ["D", "N802", "N803", "N806"]
"src/**.py" = ["N802", "N803", "N806"]
"tests/**.py" = ["N802", "N803", "N806"]

[tool.ruff.lint.pydocstyle]
# Settings: https://docs.astral.sh/ruff/settings/#lintpydocstyle
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys"]
